fixing solution 1 to final project and final project v2, still needing to fix navbar z-index

--- a/CSS-Basics/Project/style.css
+++ b/CSS-Basics/Project/style.css
@@ -1,16 +1,19 @@
+/*STEP 1*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
+/*STEP 2*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+/*STEP 3*/
 body {
   font-family: 'Roboto', sans-serif;
 }
 
-/* header section*/
+/*STEP 4*/
 .header {
   display: flex;
   justify-content: space-between;
@@ -19,12 +22,14 @@ body {
   padding: 15px;
 }
 
+/*STEP 5*/STEP 8
 main {
   height: calc(100vh - 70px);
   display: flex;
   background-color: #f9f9f9;
-}
+ }
 
+/*STEP 6*/
 /* Sidebar */ 
 .side-bar {
   height: 100%;
@@ -33,19 +38,14 @@ main {
   overflow-y: hidden;
 } 
 
+/*STEP 7*/
 @media (max-width: 768px) {
-   .side-bar {
-     display: none;
+  .side-bar {
+    display: none;
   }
-    .search {
-       display: none;
-    }
 }
-@media (max-width: 900px) {
-    .search input {
-      width: 25rem;
-    }
-  }
+
+/*STEP 8*/
 .left {
  display: flex;
  align-items: center;
@@ -56,6 +56,7 @@ main {
  cursor: pointer;
 }
 
+/*STEP 9*/
 .search {
  display: flex;
 }
@@ -66,6 +67,7 @@ main {
  height: 45px;
 }
 
+/*STEP 10*/
 .search input {
   width: 600px;
   padding:10px;
@@ -79,6 +81,7 @@ input:focus {
   border: 1px solid #ddd;
 }
 
+/*STEP 11*/
 .search button {
   height: 100%;
   width: 60px;
@@ -95,39 +98,42 @@ input:focus {
   cursor: pointer;
 }
 
+/*STEP 12*/
 .nav {
-   width: 100%;
-   display: flex;
-   flex-direction: column;
-   margin-bottom: 15px;
-   margin-top: 15px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .nav-link {
-   display: flex;
-   align-items: center;
-   padding: 12px 25px;
- }
-
-.nav-link span {
-   margin-left: 15px;
- }
-
-.nav-link:hover {
-   background: #e5e5e5;
-   cursor: pointer;
- }
-
-.active {
-   background: #e5e5e5;
+  display: flex;
+  align-items: center;
+  padding: 12px 25px;
 }
 
-hr {
-   height: 1px;
-   background-color: #e5e5e5;
-   border: none;
- }
+.nav-link span {
+  margin-left: 15px;
+}
 
+.nav-link:hover {
+  background: #e5e5e5;
+  cursor: pointer;
+}
+
+.active {
+  background: #e5e5e5;
+}
+
+/*STEP 13*/
+hr {
+  height: 1px;
+  background-color: #e5e5e5;
+  border: none;
+}
+
+/*STEP 14*/
 .content {
   background-color: #f9f9f9;
   width: 100%;
@@ -146,7 +152,7 @@ hr {
 
 .video {
   width: 270px;
-  margin:30px auto;
+  margin-bottom: 30px;
 }
 
 .thumbnail {
@@ -189,3 +195,4 @@ span {
   color: rgb(96, 96, 96);
   font-size: 12px;
 }
+
